k8s/base/userapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-userapi
  labels:
    name: hhb-userapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-userapi
  template:
    metadata:
      labels:
        name: hhb-userapi
    spec:
      containers:
        - name: hhb-userapi
          image: userapi
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
          resources:
            limits:
              cpu: "300m"
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
