k8s/base/userapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-userapi-ingress
  labels:
    name: hhb-userapi-ingress
spec:
  rules:
    - host: huishoudboekje.example.com
      http:
        paths:
          - path: /userapi
            pathType: Prefix
            backend:
              service:
                name: hhb-userapi
                port:
                  number: 80
